# docker-appdatur

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker_entrypoint.sh  pyproject.toml
.github/workflows/: docker-publish.yml
docker_appdatur/: github_token_validater.py  server.py  service_updater.py
scripts/: run.sh
